jsonschemadsl2ecore.trafo.opt/test/test103/invalidtests/example15.test103
{
	"prop1prop2":"12"
}